// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaFoxLogo does not set icon height and width when unsetIconHeight is true 1`] = `
<div>
  <div
    class="app-header__logo-container"
    data-testid="app-header-logo"
  >
    <div />
    <img
      alt=""
      class="app-header__metafox-logo--icon"
      src="./images/logo/metamask-fox.svg"
    />
  </div>
</div>
`;

exports[`MetaFoxLogo should match snapshot with img width and height default set to 42 1`] = `
<div>
  <div
    class="app-header__logo-container"
    data-testid="app-header-logo"
  >
    <div />
    <img
      alt=""
      class="app-header__metafox-logo--icon"
      height="42"
      src="./images/logo/metamask-fox.svg"
      width="42"
    />
  </div>
</div>
`;
